2006-06-09  Dan Winship  <danw@novell.com>

	* configure.in: Add tests for apache, output tests/httpd.conf

	* tests/htdigest: 
	* tests/htpasswd: 
	* tests/httpd.conf.in: Apache 2.2 config files for auth-test

	* tests/apache-wrapper.c (apache_init, apache_cleanup): functions
	to start/stop apache

	* tests/auth-test.c: Use apache-wrapper functions to start a local
	apache process to test authentication against, since the auth-test
	tree at developer.ximian.com went missing a long time ago. #311825

	* tests/Makefile.am (auth_test_SOURCES): use apache-wrapper.c
	(TESTS): include auth-test if HAVE_APACHE.

	* libsoup/soup-session.c (lookup_auth): Fix this in the case of a
	URI pointing to a directory rather than a file.

2006-06-08  Dan Winship  <danw@novell.com>

	* libsoup/soup-xmlrpc-response.c (soup_xmlrpc_value_get_int,
	soup_xmlrpc_value_get_double, soup_xmlrpc_value_get_boolean):
	Check return value of strtol/g_ascii_strtod correctly. #344222,
	patch from Brent Smith.

2006-06-07  Dan Winship  <danw@novell.com>

	* libsoup/soup-xmlrpc-response.c
	(soup_xmlrpc_response_from_string): record whether or not the
	response was a fault.
	(soup_xmlrpc_response_is_fault): test that. #343973, patch from
	Brent Smith.

2006-05-29  Dan Winship  <danw@novell.com>

	* configure.in: 2.2.93

	* NEWS: update

2006-05-29  Dan Winship  <danw@novell.com>

	* libsoup/soup-message-io.c (SoupMessageIOState): add a new state
	"FINISHING" which means "done I/O, but not yet done processing and
	cleanup" before "DONE" (which now always means "completely done").
	(soup_message_io_stop): disconnect the socket if the read state is
	"< FINISHING", not "!= DONE".
	(io_error): on an EOF-that-signals-end-of-data, set state to
	FINISHING and run io_read().
	(io_read, io_write): remove the g_return_if_fails from before.
	s/DONE/FINISHING/ in most places. In the FINISHING handler, stop
	listening for the readable/writable signal (eg, so we don't end up